[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nira-market-intel"
version = "1.0.1"
description = "Competitor research for Claude — SEO analysis, rank tracking, and market intelligence"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "pachote", email = "beatsyncpro.official@gmail.com" }
]
keywords = ["mcp", "seo", "market-research", "competitor-analysis", "trends", "claude"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "mcp[cli]>=1.27.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/pachote/nira-market-intel"
Repository = "https://github.com/pachote/nira-market-intel"
"Bug Tracker" = "https://github.com/pachote/nira-market-intel/issues"

[project.scripts]
nira-market-intel = "server:main"

[tool.hatch.build.targets.wheel]
include = ["server.py"]

[tool.hatch.metadata]
allow-direct-references = true
